--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Picture in Picture</title>
     <link
       rel="icon"
       href="http://www.google.com/s2/u/0/favicons?domain=css-tricks.com"
@@ -15,7 +15,17 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h1>Hello World</h1>
+    <div class="container">
+      <video
+        hidden
+        src=""
+        controls
+        height="360"
+        width="400"
+        id="video-container"
+      ></video>
+      <button class="btn" id="play-button">Click For Picture On Picture</button>
+    </div>
     <script src="./index.js"></script>
   </body>
 </html>
